<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- 通用 -->
    <string name="app_name">XiaoWei</string>
    <string name="waiting">loading</string>

    <!-- 登陆相关 -->
    <string name="login">登陆</string>
    <string name="login_username">用户名</string>
    <string name="login_password">密码</string>
    <string name="login_username_null">用户名不能为空</string>
    <string name="login_password_null">密码不能为空</string>
    <!-- 注册相关 -->
    <string name="register">注册</string>

    <!-- 找回密码相关 -->
    <string name="findpass">找回密码</string>

    <!-- 注销相关 -->
    <string name="logout">注销</string>

    <!-- 小维云视频 -->
    <string name="xiaowei_cloud">小维云视频</string>
    <string name="account_error_tips">您已离线，请点击登录。</string>
    <string name="network_error_tips">网络连接不可用,是否进行设置?</string>
    <string name="network_error">网络连接不可用,是否进行设置?</string>

    <!-- left Func -->
    <string name="left_myservice">我的服务</string>
    <string name="left_myalbum">我的相册</string>
    <string name="left_setting">设置中心</string>
    <string name="left_help">帮助</string>
    <string name="left_aboutus">关于</string>

    <!-- 添加设备相关 -->
    <string name="add_new_dev">+ 添加一个新设备</string>
    <string name="add_dev"> 添加设备</string>
    <string name="wifi_add">无线设备</string>
    <string name="line_add">有线设备</string>

    <!-- 视频连接相关 -->
    <string name="closed">已断开</string>
    <string name="connectting">连接中...</string>
    <string name="buffering">缓冲中...</string>
    <string name="connectfailed">连接失败</string>
    <string name="connfailed_auth">用户名或密码错误 </string>
    <string name="connfailed_channel_notopen">该通道不存在或未开放</string>
    <string name="connfailed_type_invalid">连接类型无效</string>
    <string name="connfailed_maxcount">超过设备最大连接数</string>
    <string name="connfailed_timeout">连接超时</string>
    <string name="connfailed_checkpass_timout">连接超时.</string>
    <string name="connfailed_auth_tips">用户名或密码错误，立即修改?</string>
    <string name="connect_failed">连接失败</string>
    <string name="abnormal_closed">连接异常断开</string>
    <string name="zoom">变倍</string>
    <string name="focus">变焦</string>
    
    <string name="capture">抓拍</string>
    <string name="capture_error">抓拍失败</string>
    <string name="sdcard_out_memery">您的手机未插入SDCard,暂时无法使用此功能.</string>
    <string name="sdcard_notenough">您的手机内存卡内存不足.</string>
    <string name="audiolistener">音频监听</string>
    <string name="audiolistening">正在监听</string>
    <string name="voicecall">对讲</string>
    <string name="wifiset">无线配置</string>
    <string name="set">配置</string>
    <string name="manualset">高级配置</string>
    <string name="set_success"> 配置成功</string>
    <string name="set_failed"> 配置失败</string>
    <string name="record">录像</string>
    <string name="recording">正在录像</string>
    <string name="record_savedas">录像保存在：</string>
    <string name="changestream">码流</string>
    <string name="hd">高清</string>
    <string name="sd">标清</string>
    <string name="fluent">流畅</string>
    <string name="voice_send">按住说话</string>
    <string name="voice_stop">松开结束</string>
    <string name="str_call_close"> 对讲功能成功关闭</string>
    <string name="voice_tips1">亲，你现在可以和对方说话了</string>
    <string name="voice_tips2">对讲功能成功开启，长按向对方喊话.</string>
    <string name="has_calling">设备未开启对讲或已在其他客户端开启语音对讲，请稍后重试.</string>
    <string name="checkremote">远程回放</string>
    <string name="wait_connect">请等待视频连接成功后再执行此操作</string>

    <!-- 下拉刷新，上拉加载更多 -->
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新</string>
    <string name="refreshed">刷新完毕</string>
    <string name="push_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载</string>
    <string name="loaded">加载完毕</string>

    <!-- 关于 -->
    <string name="terms_of_service">服务条款</string>
    <string name="website">官网</string>
    <string name="customer_service">客服</string>
    <string name="app_copyright">版权：Copyright  xiaowei.All Rights Reserved</string>

</resources>