<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp" >

        <SurfaceView
            android:id="@+id/playsurface"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@color/playsurfacebg" />

        <com.jovision.view.ConnectView
            android:id="@+id/connectview"
            android:layout_width="match_parent"
            android:layout_height="300dp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/capture_btn"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/capture"
            android:textSize="12sp" />

        <Button
            android:id="@+id/audio_btn"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/audiolistener"
            android:textSize="12sp" />

        <Button
            android:id="@+id/call_btn"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/voicecall"
            android:textSize="12sp" />

        <Button
            android:id="@+id/record_btn"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/record"
            android:textSize="12sp" />

        <Button
            android:id="@+id/stream_btn"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/changestream"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/remote_btn"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/checkremote"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>