<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical" >

    <include
        android:id="@+id/topbar"
        layout="@layout/topbar_layout" />


        <LinearLayout
            android:id="@+id/appinfo_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/topbar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/xiaowei" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/version_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Version:V1.0.0"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>

        <ListView
            android:id="@+id/aboutus_listview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/appinfo_layout"
            android:cacheColorHint="@color/transparent"
            android:divider="@null"
            android:dividerHeight="0dp"
            android:fadingEdge="none"
            android:fastScrollEnabled="false"
            android:footerDividersEnabled="false"
            android:headerDividersEnabled="false"
            android:scrollbars="none" >
        </ListView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/app_copyright"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/terms_of_service_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms_of_service"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/icon_divider" />

            <TextView
                android:id="@+id/website_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/website"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/icon_divider" />

            <TextView
                android:id="@+id/customer_service_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/customer_service"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/app_copyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dp"
            android:text="@string/app_copyright"
            android:textColor="@color/black"
            android:textSize="12sp" />

</RelativeLayout>